--- a/Huron.dproj
+++ b/Huron.dproj
@@ -100,7 +100,7 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="View\View.Principal.pas">
-            <Form>Form1</Form>
+            <Form>PrincipalView</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Model\Model.pas"/>
@@ -127,6 +127,14 @@
         <DCCReference Include="Controller\Controller.Produto.pas"/>
         <DCCReference Include="Controller\Controller.PedidoVenda.pas"/>
         <DCCReference Include="Singleton\Singleton.Connection.pas"/>
+        <DCCReference Include="View\View.Cliente.pas">
+            <Form>ClienteView</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="View\View.ClienteList.pas">
+            <Form>TemplateListView1</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
