--- a/Huron.dproj
+++ b/Huron.dproj
@@ -154,6 +154,7 @@
             <Form>PedidoVendaView</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="DAO\DAO.PedidoVendaItem.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
